パンくずを表示する機能を追加。 $theme->mk_breadcrumb()
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/common/css/common.css
+++ b/htdocs/common/css/common.css
@@ -3,3 +3,14 @@
 .center{
 	text-align:center;
 }
+
+/* パンくず */
+.breadcrumb{
+}
+.breadcrumb ul,
+.breadcrumb ul li{
+	display: inline;
+	list-style-type: none;
+	margin:0px;
+	padding:0px;
+}
