--- a/htdocs/common/css/common.css
+++ b/htdocs/common/css/common.css
@@ -1,10 +1,186 @@
 @charset "UTF-8";
 
+/**
+ * リセット処理
+ */
+body{
+	text-align:left;
+	padding:0px 0px 0px 0px;
+	margin:0px 0px 0px 0px;
+	color:#333333;
+}
+body,input,textarea,select,option,button{
+	font-family:"ＭＳ Ｐゴシック","MS PGOTHIC","Osaka","MS UI GOTHIC",sans-serif;
+	font-size:medium;
+}
+table{
+	border-collapse:collapse;
+}
+td, th{
+	empty-cells:show;
+	vertical-align:top;
+}
+img{
+	border:0px;
+	vertical-align:bottom;
+}
+p, .p{
+	display:block;
+	padding:0px;
+}
+div, .div{
+	display:block;
+	padding:0px;
+	margin:0px;
+}
+pre, .pre{
+	font-family:"ＭＳ ゴシック","MS GOTHIC",monospace;
+}
+address{
+	font-style:normal;
+	text-decoration:none;
+}
+span, .span{
+	display:inline;
+	padding:0px;
+	margin:0px;
+}
+.inline{
+	display:inline !important;
+}
+.block{
+	display:block !important;
+}
+
+a , a *{ cursor:pointer; }
+
+p , .p ,
+address ,
+pre , .pre ,
+ul ,
+ol ,
+dl ,
+blockquote ,
+section ,
+div.unit{
+	margin-top:1em;
+	margin-bottom:1.5em;
+}
+
+h1 ,
+h2 ,
+h3 ,
+h4 ,
+h5 ,
+h6 {
+	font-size:100%;
+	padding:0px;
+	margin-top:1em;
+	margin-bottom:0.5em;
+}
+h1{
+	margin-top:1.5em;
+	font-size:xx-large;
+}
+h2{
+	margin-top:1.5em;
+	font-size:x-large;
+}
+h3{
+	font-size:108%;
+	font-size:large;
+}
+
+/**
+ * コンテンツ領域
+ * div.contents が、テーマとコンテンツの領域の境界線となる。
+ */
+div.contents{
+	display:block !important;
+}
+
+/**
+ * ユニット
+ * モジュールの単位となる。前後にデフォルトマージン付加
+ */
+div.unit{
+	clear:both;
+}
+
+/**
+ * 画像置換
+ * .haribotekit の移植
+ */
+.imagereplace{
+	display:block;
+	position:relative; top:auto; left:auto;
+	padding:0px 0px 0px 0px !important;
+	border:0px solid transparent !important;
+	overflow:hidden;
+	zoom:100%;
+}
+.imagereplace .panel{
+	display:block;
+	position:absolute; top:0px; left:0px;
+	width:100%; height:100%;
+	background-repeat:no-repeat;
+	background-color:transparent;
+	zoom:100%;
+}
+
+
+/**
+ * 文字組み
+ */
 .center{
 	text-align:center;
 }
+.left{
+	text-align:left;
+}
+.right{
+	text-align:right;
+}
 
-/* パンくず */
+/**
+ * まわりこみ制御
+ */
+.fl{
+	float:left;
+}
+.fr{
+	float:right;
+}
+.fc{
+	float:none;
+	clear:both;
+}
+
+/**
+ * .clearfix
+ */
+.clearfix{
+	display:block;
+	float:none;
+	clear:both;
+}
+.clearfix:after{
+	content: " ";
+	display:block;
+	visibility:hidden;
+	height:0.1px;
+	font-size:0.1em;
+	line-height:0px;
+	clear:both;
+}
+.clearfix{
+	/* clearfix(for IE6,7) (IE8以降不要) */
+	zoom:1;
+}
+
+/**
+ * パンくず
+ */
 .breadcrumb{
 }
 .breadcrumb ul,
@@ -14,3 +190,12 @@
 	margin:0px;
 	padding:0px;
 }
+
+/**
+ * カレントページ
+ */
+.current{
+	font-weight:bold;
+}
+
+
