--- a/htdocs/common/css/setup.css
+++ b/htdocs/common/css/setup.css
@@ -8,7 +8,7 @@ body{
 	color:#333333;
 }
 body,input,textarea,select,option,button{
-	font-family:"ＭＳ Ｐゴシック","MS PGOTHIC","Osaka","MS UI GOTHIC",sans-serif;
+	font-family:sans-serif;
 	font-size:medium;
 }
 table{
@@ -22,17 +22,17 @@ img{
 	border:0px;
 	vertical-align:bottom;
 }
-p, .p{
+p{
 	display:block;
 	padding:0px;
 }
-div, .div{
+div{
 	display:block;
 	padding:0px;
 	margin:0px;
 }
-pre, .pre{
-	font-family:"ＭＳ ゴシック","MS GOTHIC",monospace;
+pre{
+	font-family:monospace,sans-serif;
 }
 address{
 	font-style:normal;
@@ -58,14 +58,13 @@ ol>li{
 
 a , a *{ cursor:pointer; }
 
-p , .p ,
+p ,
 address ,
-pre , .pre ,
+pre ,
 ul ,
 ol ,
 dl ,
 blockquote ,
-section ,
 div.unit{
 	margin-top:1em;
 	margin-bottom:1.5em;
@@ -123,7 +122,7 @@ div.unit{
 	overflow:hidden;
 	zoom:100%;
 }
-.imagereplace .panel{
+.imagereplace .imagereplace-panel{
 	display:block;
 	position:absolute; top:0px; left:0px;
 	width:100%; height:100%;
