CSS を整理。 ・コンテンツと共有するモジュールの定義を、modules.css に分離した。 ・モジュール table.def を追加。

--- a/htdocs/common/css/layout.css
+++ b/htdocs/common/css/layout.css
@@ -36,4 +36,18 @@ body > .outline > .footer{
 	clear:both;
 }
 
+/**
+ * パンくず
+ */
+.breadcrumb{
+}
+.breadcrumb ul,
+.breadcrumb ul li{
+	display: inline;
+	list-style-type: none;
+	margin:0px;
+	padding:0px;
+	font-size:small;
+}
+
 
