--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -150,6 +150,26 @@ div.unit{
 }
 
 /**
+ * [parts] 注釈リスト
+ */
+ul.notes{}
+ul.notes li{
+	list-style-type:none;
+	text-indent:-1em;
+}
+
+/**
+ * [parts] リストマークがないリスト
+ */
+ul.nomark{
+	padding-left:0;
+}
+ul.nomark li{
+	list-style-type:none;
+	padding-left:0;
+}
+
+/**
  * [parts] デフォルトテーブルスタイル
  */
 table.def {
