--- a/htdocs/common/css/setup.css
+++ b/htdocs/common/css/setup.css
@@ -61,6 +61,7 @@ dl ,
 blockquote{
 	margin-top:1em;
 	margin-bottom:1.5em;
+	line-height:1.4em;
 }
 
 h1 ,
@@ -73,6 +74,7 @@ h6 {
 	padding:0px;
 	margin-top:1em;
 	margin-bottom:0.5em;
+	line-height:1.4em;
 }
 h1{
 	margin-top:1.5em;
