リンク関連モジュールの改定版を反映、他 - リンクモジュールと、付加リンクモジュールを分類する仕様を反映 - モジュール集コンテンツを立て、モジュール定義についてのすべての記述をここに集めた。 - モジュール集作成に伴い、contentsmodules.odt は不要となったため、削除。 - デフォルトのCSSの実装を一部チューニングした。(font-sizeの指定方法など)

--- a/htdocs/common/css/layout.css
+++ b/htdocs/common/css/layout.css
@@ -15,7 +15,7 @@ body > .outline > .header{
 body > .outline > .header > .logo{
 }
 body > .outline > .header > .logo a{
-	font-size:xx-large;
+	font-size:150%;
 	font-weight:bold;
 }
 
@@ -47,7 +47,7 @@ body > .outline > .footer{
 	list-style-type: none;
 	margin:0px;
 	padding:0px;
-	font-size:small;
+	font-size: 85%;
 }
 
 
