--- a/htdocs/common/css/setup.css
+++ b/htdocs/common/css/setup.css
@@ -10,6 +10,7 @@ body{
 body,input,textarea,select,option,button{
 	font-family:sans-serif;
 	font-size:medium;
+	line-height:1.7em;
 }
 table{
 	border-collapse:collapse;
@@ -61,7 +62,6 @@ dl ,
 blockquote{
 	margin-top:1em;
 	margin-bottom:1.5em;
-	line-height:1.4em;
 }
 
 h1 ,
@@ -74,19 +74,17 @@ h6 {
 	padding:0px;
 	margin-top:1em;
 	margin-bottom:0.5em;
-	line-height:1.4em;
 }
 h1{
 	margin-top:1.5em;
-	font-size:xx-large;
+	font-size:150%;
 }
 h2{
 	margin-top:1.5em;
-	font-size:x-large;
+	font-size:123%;
 }
 h3{
 	font-size:108%;
-	font-size:large;
 }
 
 /**
