CSSおよびモジュール集更新。 - 定義リスト、注釈定義リストFIX。 - 策定中の 日付入りリスト .date_list を追加。

--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -219,6 +219,33 @@ ul.nomark li{
 	padding-left:0;
 }
 
+
+/**
+ * 注釈定義リスト
+ */
+dl.notes{
+	padding:0px 0px 0px 0px;
+	margin-left:0px;
+	margin-right:0px;
+}
+dl.notes dt{
+	padding:0px 0px 0px 0px;
+	margin:0px 0px 0px 0px;
+	float:left;
+	clear:left;
+	border:0px none;
+	font-weight:normal;
+}
+dl.notes dd{
+	padding:0px 0px 0px 5px;
+	margin:0px 0px 0px 0px;
+	float:none;
+	font-weight:normal;
+	display:block;
+	overflow:hidden;
+	zoom:100%;
+}
+
 /**
  * [parts] デフォルトテーブルスタイル
  */
