--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -302,3 +302,39 @@ table.def tfoot td{
 	box-sizing:border-box;
 	height:16em;
 }
+
+
+/**
+ * 日付入りリスト .date_list
+ */
+.date_list{
+}
+.date_list table{
+	width:100%;
+	border:none;
+	border-collapse: collapse;
+}
+.date_list table th,
+.date_list table td {
+	border-top: 1px solid #999999;
+	border-bottom: 1px solid #999999;
+	padding: 10px;
+}
+.date_list table th {
+	background: #e7e7e7;
+}
+.date_list table thead th,
+.date_list table tfoot th{
+	background: #d9d9d9;
+}
+.date_list table thead td,
+.date_list table tfoot td{
+	background: #eeeeee;
+}
+.date_list table th{
+	white-space:nowrap;
+}
+.date_list table thead{
+	text-align:center;
+}
+
