fillcontents.php を修正。 - 拡張子違いのコンテンツを検索するようにした。 - パーミッションの指定は、フレームワークのデフォルトに従うことにした。 - エイリアスページをスキップするようにした。 - run を付けないと実行されないようにした。 - 他、CSSの微調整などこまかい修正。

--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -264,6 +264,7 @@ table.def {
 table.def th,
 table.def td {
 	border: 1px solid #999999;
+	background: #ffffff;
 	padding: 10px;
 }
 table.def th {
