--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -313,7 +313,7 @@ table.def tfoot td{
 
 
 /**
- * 日付入りリスト .date_list
+ * [parts] 日付入りリスト .date_list
  */
 .date_list{
 }
@@ -344,5 +344,119 @@ table.def tfoot td{
 }
 .date_list table thead{
 	text-align:center;
+}
+
+
+/**
+ * [parts] フォーム要素
+ */
+table.form_elements {
+	border:none;
+	border-collapse: collapse;
+	text-align: left;
+	width:100%;
+}
+table.form_elements thead{
+	display:none;
+}
+table.form_elements th,
+table.form_elements td {
+	border: 1px solid #999999;
+	padding: 10px;
+}
+table.form_elements th {
+	background: #e7e7e7;
+}
+table.form_elements thead th,
+table.form_elements tfoot th{
+	background: #d9d9d9;
+	text-align:center;
+}
+table.form_elements thead td,
+table.form_elements tfoot td{
+	background: #eeeeee;
+}
+table.form_elements tbody th {
+	width:30%;
+}
+table.form_elements tbody td {
+	width:70%;
+}
+table.form_elements .form_elements-notes {
+	font-size:86%;
+	color:#999999;
+	margin:0px; padding:0px;
+}
+table.form_elements .form_elements-notes li{
+	list-style-type:none;
+	margin:0px;
+}
+table.form_elements .form_elements-list{
+	margin:0px; padding:0px;
+}
+table.form_elements .form_elements-list li{
+	margin:0px; padding:0px;
+	list-style-type:none;
+}
+table.form_elements .form_elements-list_horizontal{
+	margin:0px; padding:0px;
+}
+table.form_elements .form_elements-list_horizontal li{
+	margin:0px; padding:0px;
+	list-style-type:none;
+	display:inline;
+}
+table.form_elements .form_elements-must{
+	color:#ff0000;
+	font-weight:bold;
+	display:block;
+}
+table.form_elements .form_elements-error{
+}
+table.form_elements .form_elements-error th{
+	background-color:#ffcccc;
+}
+table.form_elements .form_elements-error td{
+	background-color:#fff2f2;
+}
+table.form_elements ul.form_elements-errors{
+	color:#ff0000;
+	margin:0px; padding:0px;
+}
+table.form_elements ul.form_elements-errors li{
+	list-style-type:none;
+	margin:0px;
+}
+
+/**
+ * [unit] フォーム送信ボタン
+ */
+.form_buttons {
+	position:relative;
+	text-align:center;
+}
+.form_buttons ul ,
+.form_buttons ul li{
+	margin:0; padding:0;
+	list-style-type:none;
+}
+.form_buttons ul li.form_buttons-revise{
+	position:absolute; left:0px; bottom:0px;
+}
+
+/**
+ * [unit] エラー通知ボックス
+ */
+.form_error_box {
+	border: 2px solid #ff9900;
+	padding:0 20px;
+	background-color:#fff5f5;
+	color:#ff0000;
+	margin-left:20px;
+	margin-right:20px;
+	border-radius:10px;
+}
+.form_error_box a{
+	color:#ff0000;
 }
 
