スタイルシートをちょっぴり修正。 - THEME=sample でのレスポンシブの挙動をちょっぴり調整。 - もとの .code pre code を overflow:auto; に変更。

--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -303,6 +303,7 @@ table.def tfoot td{
 	width:auto;
 	background:#e8e8e8;
 	border:1px dashed #999999;
+	overflow:auto;
 }
 .code textarea{
 	display:block;
