--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -512,6 +512,7 @@ table.form_elements ul.form_elements-errors li{
 	width:25%;
 	>width:24.9%;
 	margin:0px;
+	margin-bottom:0.5em;
 	padding:0px;
 	vertical-align:top;
 	font-size:small;
