スタイルシートをちょっと修正。

--- a/htdocs/common/css/setup.css
+++ b/htdocs/common/css/setup.css
@@ -10,7 +10,7 @@ body{
 body,input,textarea,select,option,button{
 	font-family:sans-serif;
 	font-size:medium;
-	line-height:1.7em;
+	line-height:1.7;
 }
 table{
 	border-collapse:collapse;
