--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -296,7 +296,7 @@ table.def tfoot td{
 	background:#f5f5f5;
 	padding:1em;
 	font-size:small;
-	line-height:1.5em;
+	line-height:1.5;
 }
 .code code{
 	display:block;
@@ -512,7 +512,7 @@ table.form_elements ul.form_elements-errors li{
 	width:25%;
 	>width:24.9%;
 	margin:0px;
-	margin-bottom:0.5em;
+	margin-bottom:10px;
 	padding:0px;
 	vertical-align:top;
 	font-size:small;
