--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -1,52 +1,6 @@
 @charset "UTF-8";
 
 /**
- * [parts] 画像置換
- */
-.imagereplace{
-	display:block;
-	position:relative; top:auto; left:auto;
-	padding:0px 0px 0px 0px !important;
-	border:0px solid transparent !important;
-	overflow:hidden;
-	zoom:100%;
-}
-.imagereplace .imagereplace-panel{
-	display:block;
-	position:absolute; top:0px; left:0px;
-	width:100%; height:100%;
-	background-repeat:no-repeat;
-	background-color:transparent;
-	zoom:100%;
-}
-
-/**
- * [static] 文字サイズ
- */
-.xxlarge{
-	font-size:150%;
-}
-.xlarge{
-	font-size:123%;
-}
-.large{
-	font-size:108%;
-}
-.medium{
-	font-size:100%;
-}
-.small{
-	font-size: 85%;
-}
-.xsmall{
-	font-size: 77%;
-}
-.xxsmall{
-	font-size: 60%;
-}
-
-
-/**
  * [static] 文字組み
  */
 .center{
@@ -74,19 +28,40 @@
 }
 
 /**
- * [parts] 読み上げブラウザ対応のための隠しナビゲーション
+ * [static] レイアウト制御
  */
-.aural{
-	display: block;
-	visibility: hidden;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	overflow: hidden;
-	width: 0px;
-	height: 0px;
-	background-color: transparent;
+.inline{
+	display:inline !important;
 }
+.block{
+	display:block !important;
+}
+
+/**
+ * [parts] 文字サイズ
+ */
+.xxlarge{
+	font-size:150%;
+}
+.xlarge{
+	font-size:123%;
+}
+.large{
+	font-size:108%;
+}
+.medium{
+	font-size:100%;
+}
+.small{
+	font-size: 85%;
+}
+.xsmall{
+	font-size: 77%;
+}
+.xxsmall{
+	font-size: 60%;
+}
+
 
 /**
  * [parts] リンク
@@ -142,6 +117,41 @@ a span.pdf:after{
  */
 .error{
 	color:#ff0000;
+}
+
+/**
+ * [parts] 画像置換
+ */
+.imagereplace{
+	display:block;
+	position:relative; top:auto; left:auto;
+	padding:0px 0px 0px 0px !important;
+	border:0px solid transparent !important;
+	overflow:hidden;
+	zoom:100%;
+}
+.imagereplace .imagereplace-panel{
+	display:block;
+	position:absolute; top:0px; left:0px;
+	width:100%; height:100%;
+	background-repeat:no-repeat;
+	background-color:transparent;
+	zoom:100%;
+}
+
+/**
+ * [parts] 読み上げブラウザ対応のための隠しナビゲーション
+ */
+.aural{
+	display: block;
+	visibility: hidden;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	overflow: hidden;
+	width: 0px;
+	height: 0px;
+	background-color: transparent;
 }
 
 /**
