--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -38,6 +38,152 @@
 }
 
 /**
+ * [static] マージン制御
+ */
+.mt1em  { margin-top:   1em !important; }
+.mt1hem { margin-top: 1.5em !important; }
+.mt2em  { margin-top:   2em !important; }
+.mt0 { margin-top:  0px !important; }
+.mt1 { margin-top:  1px !important; }
+.mt2 { margin-top:  2px !important; }
+.mt3 { margin-top:  3px !important; }
+.mt4 { margin-top:  4px !important; }
+.mt5 { margin-top:  5px !important; }
+.mt6 { margin-top:  6px !important; }
+.mt7 { margin-top:  7px !important; }
+.mt8 { margin-top:  8px !important; }
+.mt9 { margin-top:  9px !important; }
+.mt10{ margin-top: 10px !important; }
+.mt15{ margin-top: 15px !important; }
+.mt20{ margin-top: 20px !important; }
+.mt25{ margin-top: 25px !important; }
+.mt30{ margin-top: 30px !important; }
+
+.mb1em  { margin-bottom:   1em !important; }
+.mb1hem { margin-bottom: 1.5em !important; }
+.mb2em  { margin-bottom:   2em !important; }
+.mb0 { margin-bottom:  0px !important; }
+.mb1 { margin-bottom:  1px !important; }
+.mb2 { margin-bottom:  2px !important; }
+.mb3 { margin-bottom:  3px !important; }
+.mb4 { margin-bottom:  4px !important; }
+.mb5 { margin-bottom:  5px !important; }
+.mb6 { margin-bottom:  6px !important; }
+.mb7 { margin-bottom:  7px !important; }
+.mb8 { margin-bottom:  8px !important; }
+.mb9 { margin-bottom:  9px !important; }
+.mb10{ margin-bottom: 10px !important; }
+.mb15{ margin-bottom: 15px !important; }
+.mb20{ margin-bottom: 20px !important; }
+.mb25{ margin-bottom: 25px !important; }
+.mb30{ margin-bottom: 30px !important; }
+
+.ml0 { margin-left:  0px !important; }
+.ml1 { margin-left:  1px !important; }
+.ml2 { margin-left:  2px !important; }
+.ml3 { margin-left:  3px !important; }
+.ml4 { margin-left:  4px !important; }
+.ml5 { margin-left:  5px !important; }
+.ml6 { margin-left:  6px !important; }
+.ml7 { margin-left:  7px !important; }
+.ml8 { margin-left:  8px !important; }
+.ml9 { margin-left:  9px !important; }
+.ml10{ margin-left: 10px !important; }
+.ml15{ margin-left: 15px !important; }
+.ml20{ margin-left: 20px !important; }
+.ml25{ margin-left: 25px !important; }
+.ml30{ margin-left: 30px !important; }
+
+.mr0 { margin-right:  0px !important; }
+.mr1 { margin-right:  1px !important; }
+.mr2 { margin-right:  2px !important; }
+.mr3 { margin-right:  3px !important; }
+.mr4 { margin-right:  4px !important; }
+.mr5 { margin-right:  5px !important; }
+.mr6 { margin-right:  6px !important; }
+.mr7 { margin-right:  7px !important; }
+.mr8 { margin-right:  8px !important; }
+.mr9 { margin-right:  9px !important; }
+.mr10{ margin-right: 10px !important; }
+.mr15{ margin-right: 15px !important; }
+.mr20{ margin-right: 20px !important; }
+.mr25{ margin-right: 25px !important; }
+.mr30{ margin-right: 30px !important; }
+
+/**
+ * [static] パディング制御
+ */
+.pt1em  { padding-top:   1em !important; }
+.pt1hem { padding-top: 1.5em !important; }
+.pt2em  { padding-top:   2em !important; }
+.pt0 { padding-top:  0px !important; }
+.pt1 { padding-top:  1px !important; }
+.pt2 { padding-top:  2px !important; }
+.pt3 { padding-top:  3px !important; }
+.pt4 { padding-top:  4px !important; }
+.pt5 { padding-top:  5px !important; }
+.pt6 { padding-top:  6px !important; }
+.pt7 { padding-top:  7px !important; }
+.pt8 { padding-top:  8px !important; }
+.pt9 { padding-top:  9px !important; }
+.pt10{ padding-top: 10px !important; }
+.pt15{ padding-top: 15px !important; }
+.pt20{ padding-top: 20px !important; }
+.pt25{ padding-top: 25px !important; }
+.pt30{ padding-top: 30px !important; }
+
+.pb1em  { padding-bottom:   1em !important; }
+.pb1hem { padding-bottom: 1.5em !important; }
+.pb2em  { padding-bottom:   2em !important; }
+.pb0 { padding-bottom:  0px !important; }
+.pb1 { padding-bottom:  1px !important; }
+.pb2 { padding-bottom:  2px !important; }
+.pb3 { padding-bottom:  3px !important; }
+.pb4 { padding-bottom:  4px !important; }
+.pb5 { padding-bottom:  5px !important; }
+.pb6 { padding-bottom:  6px !important; }
+.pb7 { padding-bottom:  7px !important; }
+.pb8 { padding-bottom:  8px !important; }
+.pb9 { padding-bottom:  9px !important; }
+.pb10{ padding-bottom: 10px !important; }
+.pb15{ padding-bottom: 15px !important; }
+.pb20{ padding-bottom: 20px !important; }
+.pb25{ padding-bottom: 25px !important; }
+.pb30{ padding-bottom: 30px !important; }
+
+.pl0 { padding-left:  0px !important; }
+.pl1 { padding-left:  1px !important; }
+.pl2 { padding-left:  2px !important; }
+.pl3 { padding-left:  3px !important; }
+.pl4 { padding-left:  4px !important; }
+.pl5 { padding-left:  5px !important; }
+.pl6 { padding-left:  6px !important; }
+.pl7 { padding-left:  7px !important; }
+.pl8 { padding-left:  8px !important; }
+.pl9 { padding-left:  9px !important; }
+.pl10{ padding-left: 10px !important; }
+.pl15{ padding-left: 15px !important; }
+.pl20{ padding-left: 20px !important; }
+.pl25{ padding-left: 25px !important; }
+.pl30{ padding-left: 30px !important; }
+
+.pr0 { padding-right:  0px !important; }
+.pr1 { padding-right:  1px !important; }
+.pr2 { padding-right:  2px !important; }
+.pr3 { padding-right:  3px !important; }
+.pr4 { padding-right:  4px !important; }
+.pr5 { padding-right:  5px !important; }
+.pr6 { padding-right:  6px !important; }
+.pr7 { padding-right:  7px !important; }
+.pr8 { padding-right:  8px !important; }
+.pr9 { padding-right:  9px !important; }
+.pr10{ padding-right: 10px !important; }
+.pr15{ padding-right: 15px !important; }
+.pr20{ padding-right: 20px !important; }
+.pr25{ padding-right: 25px !important; }
+.pr30{ padding-right: 30px !important; }
+
+/**
  * [parts] 文字サイズ
  */
 .xxlarge{
