ドキュメントモジュール仕様変更。など
- パーセント幅指定の命名規則を、w50per から 1of2 の形式に変更。
- CSS上の 0px を 0 に置き換えた。
- readme.txt を更新。

--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -43,7 +43,7 @@
 .mt1em  { margin-top:   1em !important; }
 .mt1p5em{ margin-top: 1.5em !important; }
 .mt2em  { margin-top:   2em !important; }
-.mt0 { margin-top:  0px !important; }
+.mt0 { margin-top:  0   !important; }
 .mt1 { margin-top:  1px !important; }
 .mt2 { margin-top:  2px !important; }
 .mt3 { margin-top:  3px !important; }
@@ -62,7 +62,7 @@
 .mb1em  { margin-bottom:   1em !important; }
 .mb1p5em{ margin-bottom: 1.5em !important; }
 .mb2em  { margin-bottom:   2em !important; }
-.mb0 { margin-bottom:  0px !important; }
+.mb0 { margin-bottom:  0   !important; }
 .mb1 { margin-bottom:  1px !important; }
 .mb2 { margin-bottom:  2px !important; }
 .mb3 { margin-bottom:  3px !important; }
@@ -78,7 +78,7 @@
 .mb25{ margin-bottom: 25px !important; }
 .mb30{ margin-bottom: 30px !important; }
 
-.ml0 { margin-left:  0px !important; }
+.ml0 { margin-left:  0   !important; }
 .ml1 { margin-left:  1px !important; }
 .ml2 { margin-left:  2px !important; }
 .ml3 { margin-left:  3px !important; }
@@ -94,7 +94,7 @@
 .ml25{ margin-left: 25px !important; }
 .ml30{ margin-left: 30px !important; }
 
-.mr0 { margin-right:  0px !important; }
+.mr0 { margin-right:  0   !important; }
 .mr1 { margin-right:  1px !important; }
 .mr2 { margin-right:  2px !important; }
 .mr3 { margin-right:  3px !important; }
@@ -116,7 +116,7 @@
 .pt1em  { padding-top:   1em !important; }
 .pt1p5em{ padding-top: 1.5em !important; }
 .pt2em  { padding-top:   2em !important; }
-.pt0 { padding-top:  0px !important; }
+.pt0 { padding-top:  0   !important; }
 .pt1 { padding-top:  1px !important; }
 .pt2 { padding-top:  2px !important; }
 .pt3 { padding-top:  3px !important; }
@@ -135,7 +135,7 @@
 .pb1em  { padding-bottom:   1em !important; }
 .pb1p5em{ padding-bottom: 1.5em !important; }
 .pb2em  { padding-bottom:   2em !important; }
-.pb0 { padding-bottom:  0px !important; }
+.pb0 { padding-bottom:  0   !important; }
 .pb1 { padding-bottom:  1px !important; }
 .pb2 { padding-bottom:  2px !important; }
 .pb3 { padding-bottom:  3px !important; }
@@ -151,7 +151,7 @@
 .pb25{ padding-bottom: 25px !important; }
 .pb30{ padding-bottom: 30px !important; }
 
-.pl0 { padding-left:  0px !important; }
+.pl0 { padding-left:  0   !important; }
 .pl1 { padding-left:  1px !important; }
 .pl2 { padding-left:  2px !important; }
 .pl3 { padding-left:  3px !important; }
@@ -167,7 +167,7 @@
 .pl25{ padding-left: 25px !important; }
 .pl30{ padding-left: 30px !important; }
 
-.pr0 { padding-right:  0px !important; }
+.pr0 { padding-right:  0   !important; }
 .pr1 { padding-right:  1px !important; }
 .pr2 { padding-right:  2px !important; }
 .pr3 { padding-right:  3px !important; }
@@ -271,14 +271,14 @@ a span.pdf:after{
 .imgrep{
 	display:block;
 	position:relative; top:auto; left:auto;
-	padding:0px 0px 0px 0px !important;
-	border:0px solid transparent !important;
+	padding:0 0 0 0 !important;
+	border:0 solid transparent !important;
 	overflow:hidden;
 	zoom:100%;
 }
 .imgrep .imgrep-panel{
 	display:block;
-	position:absolute; top:0px; left:0px;
+	position:absolute; top:0; left:0;
 	width:100%; height:100%;
 	background-repeat:no-repeat;
 	background-color:transparent;
@@ -292,11 +292,11 @@ a span.pdf:after{
 	display: block;
 	visibility: hidden;
 	position: absolute;
-	left: 0px;
-	top: 0px;
+	left: 0;
+	top: 0;
 	overflow: hidden;
-	width: 0px;
-	height: 0px;
+	width: 0;
+	height: 0;
 	background-color: transparent;
 }
 
@@ -333,7 +333,7 @@ div.unit{
 	visibility:hidden;
 	height:0.1px;
 	font-size:0.1em;
-	line-height:0px;
+	line-height:0;
 	clear:both;
 }
 .unit,
@@ -353,19 +353,19 @@ div.unit{
 	float:left;
 	margin:0 0 0 0;
 }
-.cols-col.cols-w75per{
+.cols-col.cols-3of4{
 	width:75%;
 }
-.cols-col.cols-w50per{
+.cols-col.cols-1of2{
 	width:50%;
 }
-.cols-col.cols-w66per{
+.cols-col.cols-2of3{
 	width:66.666%;
 }
-.cols-col.cols-w33per{
+.cols-col.cols-1of3{
 	width:33.333%;
 }
-.cols-col.cols-w25per{
+.cols-col.cols-1of4{
 	width:25%;
 }
 .cols .cols-pad{
@@ -410,21 +410,21 @@ ul.nomark li.nomark-li{
  * 注釈定義リスト
  */
 dl.notes{
-	padding:0px 0px 0px 0px;
-	margin-left:0px;
-	margin-right:0px;
+	padding:0 0 0 0;
+	margin-left:0;
+	margin-right:0;
 }
 dl.notes dt.notes-dt{
-	padding:0px 0px 0px 0px;
-	margin:0px 0px 0px 0px;
+	padding:0 0 0 0;
+	margin:0 0 0 0;
 	float:left;
 	clear:left;
-	border:0px none;
+	border:0 none;
 	font-weight:normal;
 }
 dl.notes dd.notes-dd{
-	padding:0px 0px 0px 5px;
-	margin:0px 0px 0px 0px;
+	padding:0 0 0 5px;
+	margin:0 0 0 0;
 	float:none;
 	font-weight:normal;
 	display:block;
@@ -467,7 +467,7 @@ table.def tfoot td{
 	margin:1em 0;
 }
 .code pre{
-	margin:0px;
+	margin:0;
 }
 .code code,
 .code textarea{
@@ -564,24 +564,24 @@ table.form_elements tbody td {
 table.form_elements .form_elements-notes {
 	font-size:86%;
 	color:#999999;
-	margin:0px; padding:0px;
+	margin:0; padding:0;
 }
 table.form_elements .form_elements-notes li{
 	list-style-type:none;
-	margin:0px;
+	margin:0;
 }
 table.form_elements .form_elements-list{
-	margin:0px; padding:0px;
+	margin:0; padding:0;
 }
 table.form_elements .form_elements-list li{
-	margin:0px; padding:0px;
+	margin:0; padding:0;
 	list-style-type:none;
 }
 table.form_elements .form_elements-list_horizontal{
-	margin:0px; padding:0px;
+	margin:0; padding:0;
 }
 table.form_elements .form_elements-list_horizontal li{
-	margin:0px; padding:0px;
+	margin:0; padding:0;
 	list-style-type:none;
 	display:inline;
 }
@@ -600,11 +600,11 @@ table.form_elements .form_elements-error td{
 }
 table.form_elements ul.form_elements-errors{
 	color:#ff0000;
-	margin:0px; padding:0px;
+	margin:0; padding:0;
 }
 table.form_elements ul.form_elements-errors li{
 	list-style-type:none;
-	margin:0px;
+	margin:0;
 }
 
 /**
@@ -620,7 +620,7 @@ table.form_elements ul.form_elements-errors li{
 	list-style-type:none;
 }
 .form_buttons ul li.form_buttons-revise{
-	position:absolute; left:0px; bottom:0px;
+	position:absolute; left:0; bottom:0;
 }
 
 /**
@@ -663,13 +663,13 @@ table.form_elements ul.form_elements-errors li{
 }
 .pager ul{
 	text-align:center;
-	padding:0px;
-	margin:0px;
+	padding:0;
+	margin:0;
 }
 .pager ul li{
 	display:inline;
 	list-style-type:none;
-	padding:0px 5px 0px 5px;
+	padding:0 5px 0 5px;
 }
 
 /**
@@ -679,9 +679,9 @@ table.form_elements ul.form_elements-errors li{
 }
 .thumb_list ul{
 	text-align:left;
-	padding:0px;
-	margin:0px;
-	font-size:0px;
+	padding:0;
+	margin:0;
+	font-size:0;
 	margin-left:-10px; zoom:1;
 }
 .thumb_list ul li{
@@ -690,9 +690,9 @@ table.form_elements ul.form_elements-errors li{
 	list-style-type:none;
 	width:25%;
 	>width:24.9%;
-	margin:0px;
+	margin:0;
 	margin-bottom:10px;
-	padding:0px;
+	padding:0;
 	vertical-align:top;
 	font-size:small;
 }
@@ -717,53 +717,53 @@ table.form_elements ul.form_elements-errors li{
  */
 .float_image{
 }
-.float_image .float_image-r50per{
+.float_image .float_image-r1of2{
 	float:right;
 	width:50%;
 	margin-left:20px;
 	margin-bottom:20px;
 }
-.float_image .float_image-l50per{
+.float_image .float_image-l1of2{
 	float:left;
 	width:50%;
 	margin-right:20px;
 	margin-bottom:20px;
 }
-.float_image .float_image-r33per{
+.float_image .float_image-r1of3{
 	float:right;
 	width:33%;
 	margin-left:20px;
 	margin-bottom:20px;
 }
-.float_image .float_image-l33per{
+.float_image .float_image-l1of3{
 	float:left;
 	width:33%;
 	margin-right:20px;
 	margin-bottom:20px;
 }
-.float_image .float_image-r25per{
+.float_image .float_image-r1of4{
 	float:right;
 	width:25%;
 	margin-left:20px;
 	margin-bottom:20px;
 }
-.float_image .float_image-l25per{
+.float_image .float_image-l1of4{
 	float:left;
 	width:25%;
 	margin-right:20px;
 	margin-bottom:20px;
 }
-.float_image .float_image-l50per img,
-.float_image .float_image-l33per img,
-.float_image .float_image-l25per img,
-.float_image .float_image-r50per img,
-.float_image .float_image-r33per img,
-.float_image .float_image-r25per img{
+.float_image .float_image-l1of2 img,
+.float_image .float_image-l1of3 img,
+.float_image .float_image-l1of4 img,
+.float_image .float_image-r1of2 img,
+.float_image .float_image-r1of3 img,
+.float_image .float_image-r1of4 img{
 	width:100%;
 	height:auto;
 }
 .float_image .float_image-image{
-	margin-top:0px;
+	margin-top:0;
 }
 .float_image .float_image-caption{
 	font-size:86%;
@@ -774,6 +774,6 @@ table.form_elements ul.form_elements-errors li{
 	overflow:hidden;
 }
 .float_image .float_image-body_rect *:first-child{
-	margin-top:0px;
+	margin-top:0;
 }
 
