ドキュメントモジュールの仕様を一部変更。
- .topic_box, .aside_box を追加。
- [unit].attention を [parts].attention_box に変更。
- そのほか表現上の小さな修正。
- モジュールとして hr を追加。
- モジュール命名規則の慣例として、*_box, *-last を追記。
- ページトップへ戻るのアンカー名を #page_top とした。テーマの該当箇所を更新。

--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -258,6 +258,7 @@ a span.pdf:after{
 	content:" (PDF)";
 }
 
+
 /**
  * [parts] エラー表示
  */
@@ -306,6 +307,46 @@ a span.pdf:after{
 .current{
 	font-weight:bold;
 }
+
+/**
+ * [parts] トピックボックス
+ */
+.topic_box{
+	padding: 0.5em 1em;
+	background-color: #dddddd;
+}
+.topic_box .topic_box-heading{
+	font-weight:bold;
+	margin:1em 0;
+	font-size:120%;
+}
+/**
+ * [parts] 付加情報ボックス
+ */
+.aside_box{
+	padding: 0.5em 1em;
+	background-color: #cceecc;
+	font-size:86%;
+}
+.aside_box .aside_box-heading{
+	font-weight:bold;
+	margin:1em 0;
+	font-size:120%;
+}
+/**
+ * [parts] 注意喚起ボックス
+ */
+.attention_box{
+	padding: 0.5em 1em;
+	background-color: #ffcccc;
+}
+.attention_box .attention_box-heading{
+	font-weight:bold;
+	margin:1em 0;
+	font-size:120%;
+}
+
+
 
 /**
  * [unit] ユニット
