ドキュメントモジュールに ul.horizontal を追加。
- li要素が水平並びのレイアウトになる。
- for Issue #24

--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -487,6 +487,18 @@ ul.nomark li.nomark-li{
 	padding-left:0;
 }
 
+/**
+ * [parts] 水平並びリスト
+ */
+ul.horizontal{
+	padding-left:0;
+}
+ul.horizontal li.horizontal-li{
+	list-style-type:none;
+	padding-left:0;
+	padding-right:20;
+	display:inline;
+}
 
 /**
  * 注釈定義リスト
