ドキュメントモジュール仕様を更新。
- ページタイトルを、「コーディング規則」から「ドキュメントモジュール」に変更。
- ボックスモジュールのカテゴリを追加。(for Issue #37)
- サンプルコード中に、モジュール展開時に変更して良い箇所とどのように変更して良いかを示すサインを入れた。
-- {$text} = テキスト
-- {$int} = 数値
-- {$inline} = インライン要素
-- {$parts} = パーツモジュール
-- {$box} = ボックスモジュール
-- {$unit} = ユニットモジュール
-- {$href} = リンク先パス
-- {$anchor} = アンカー名
-- {$image} = 画像リソースのパス
-- {$JavaScriptCode} = JavaScriptコード
- .anchor_links にボーダーをつけた。

--- a/htdocs/common/css/modules.css
+++ b/htdocs/common/css/modules.css
@@ -263,6 +263,7 @@ a span.pdf:after{
  */
 .anchor_links{
 	padding:1.5em;
+	border:1px solid #999999;
 }
 .anchor_links .anchor_links-heading{
 	text-align:center;
