ドキュメントモジュールを、FESS という別プロジェクトを立てて分離独立した。
- FESS 1.1.0b1 に更新。
- modules.css を fess.css に改名。
- PxCommands 画面でも、fess.css を読み込むようにした。(ハードコーディングをやめた)

--- a/htdocs/_PX/themes/sample/theme.files/css/layout.css
+++ b/htdocs/_PX/themes/sample/theme.files/css/layout.css
@@ -6,7 +6,7 @@ body{
 	margin:0px 0px 0px 0px;
 	background-color:#dddddd;
 	font-size:small;
-	font-family:"メイリオ", sans-serif;
+	font-family:"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","Meiryo","メイリオ", sans-serif;
 }
 body .theme_outline{
 	text-align:left;
